--- a/Frontend/src/Components/LatestCollection/LatestCollection.css
+++ b/Frontend/src/Components/LatestCollection/LatestCollection.css
@@ -9,3 +9,27 @@
     grid-template-columns: repeat(5, 1fr);
     gap: 20px;
 }
+
+@media (max-width:1100px) {
+    .product_div{
+        grid-template-columns: repeat(4, 1fr);
+    }
+}
+
+@media (max-width:950px) {
+    .product_div{
+        grid-template-columns: repeat(3, 1fr);
+    }
+}
+
+@media (max-width:750px) {
+    .product_div{
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
+
+@media (max-width:480px) {
+    .product_div{
+        grid-template-columns: repeat(1, 1fr);
+    }
+}
