--- a/Frontend/src/Components/Hero/Hero.css
+++ b/Frontend/src/Components/Hero/Hero.css
@@ -1,11 +1,11 @@
 .hero{
-    height: 550px;
+    height: 500px;
     overflow: hidden;
 }
 
 .carousel-item img{
     width: 100%;
-    height: 550px;
+    height: auto;
     border-radius: 10px;
 }
 
