--- a/Frontend/src/Components/ProductPage/ProductHero.jsx/ProductHero.css
+++ b/Frontend/src/Components/ProductPage/ProductHero.jsx/ProductHero.css
@@ -1,5 +1,5 @@
 .product_img_list{
-    width: 700px;
+    width: 200px;
     height: 450px;
     overflow-x: hidden;
     overflow-y: scroll;
@@ -7,11 +7,17 @@
 }
 
 .product_img_list::-webkit-scrollbar{
-    width: 8px;
+    display: none;
 }
 
 .side_img_list img{
     width: 100px;
+}
+
+@media (max-width:1200px) {
+    .product_img_list{
+        width: 700px;
+    }
 }
 
 @media (max-width:900px) {
@@ -36,7 +42,8 @@
         flex-direction: column;
     }
     .product_img_list{
-        width: 500px;
+        width: 400px;
+        margin-bottom: 10px;
         height: auto;
         gap: 20px;
         overflow-y: hidden;
