Implement cart functionality with CartProduct component; integrate cart data handling in Cart page and add toast notifications for size selection

--- a/Frontend/src/Components/ProductPage/ProductHero.jsx/ProductHero.css
+++ b/Frontend/src/Components/ProductPage/ProductHero.jsx/ProductHero.css
@@ -4,6 +4,7 @@
     overflow-x: hidden;
     overflow-y: scroll;
     flex-direction: column;
+    cursor: pointer;
 }
 
 .product_img_list::-webkit-scrollbar{
