--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -1,20 +1,25 @@
-
-*{
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
 
-body{
-    background-color: white !important;
-    color: black !important;
+body {
+  background-color: white !important;
+  color: black !important;
 }
 
-a{
-    color: black !important;
-    text-decoration: none !important;
+a {
+  color: black !important;
+  text-decoration: none !important;
 }
 
-.main_div{
-    padding: 0 6%;
+.main_div {
+  padding: 0 6%;
+}
+
+@media (max-width: 700px) {
+  .cart_amount {
+    width: 100% !important;
+  }
 }
