onclick navigate to additem listitem order home

--- a/admin/src/Components/Navbar/Navbar.css
+++ b/admin/src/Components/Navbar/Navbar.css
@@ -1,8 +1,9 @@
-.nav_logo{
-    width: 150px;
+.nav_logo {
+  width: 150px;
+  cursor: pointer;
 }
-@media (max-width:400px) {
-    .nav_logo{
-        width: 100px;
-    }
+@media (max-width: 400px) {
+  .nav_logo {
+    width: 100px;
+  }
 }
