--- a/admin/src/index.css
+++ b/admin/src/index.css
@@ -11,3 +11,13 @@ a {
   text-decoration: none !important;
   color: black !important;
 }
+
+.sidebar_div{
+  width: 15%;
+  float: left;
+}
+
+.item_div{
+  width: 84%;
+  float: right;
+}
